# reggae

./: .gitignore  .travis.yml  Gemfile  LICENSE  Makefile  README.md  TODO.txt  action.yml  appveyor.yml  bootstrap.bat  bootstrap.sh  d.yml  dub.json  dub.selections.json  list_payload.d  minimal_bootstrap.sh  reggaefile.d  run-tests.sh
.config/: cucumber.yml
doc/: README.md  basics.md  configuration.md  custom_external_lib.md  export.md  index.md  json_build.md  rules.md
features/: analysis.txt  arbitrary.feature  arbritrary.feature  backend_errors.feature  binary.feature  code_command.feature  code_command_error.feature  cppcompile.feature  cppexe.feature  cpplink.feature  dcompile.feature  default_options.feature  dependencies.feature  dexe.feature  directory_errors.feature  dlang.feature  dlink.feature  dub.feature  dub_reggae.feature  dub_target_type.feature  end_to_end.feature  export.feature  implicit_dependencies.feature  javascript.feature  js_json_build_arbitrary.feature  json_build_link.feature  json_build_scriptlike.feature  json_build_static_lib.feature  lua.feature  multiple_outputs.feature  optional.feature  output_in_project_path.feature  phony.feature  python.feature  python_json_build_arbitrary.feature  python_json_build_executable.feature  python_json_build_scriptlike.feature  regressions.feature  (+6 more)
src/: main.d  (+3 more)
tests/projects/cmake-shared/: CMakeLists.txt
tests/projects/cmake-shared/include/: Calculator.h
tests/projects/cmake-shared/src/: main.cpp
tests/projects/cmake-static/: CMakeLists.txt
tests/projects/cmake-static/src/: Calculator.cpp
(+277 files in other folders)
